# plumage

./: CMakeLists.txt  READEME.md  README.md
include/plumage/: compatibility_checker.hpp  plugin_entity.hpp  plugin_information.hpp  plugin_interface.hpp  plugin_manager.hpp  plugin_repository.hpp  plugin_requirement.hpp  plumage_config.hpp  plumage_util.hpp
sample/: CMakeLists.txt  sample.cpp
sample/plugin/: sample_plugin.cpp  sample_plugin.hpp
src/: plugin_entity.cpp  plugin_information.cpp  plugin_interface.cpp  plugin_manager.cpp  plugin_repository.cpp  plugin_requirement.cpp
